agregamos la adivinanza

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div class="logo text-center">
-            <a href="index.html">
+            <a href="/">
                 <img src="img/Logo.jpg" alt="Logo" class="img-fluid" />
             </a>
         </div><!--Logo-->
@@ -37,13 +37,13 @@
             <nav class="navegacion">
                 <a href="comidas.html">Comidas</a>
                 <a href="contacto.html">Contacto</a>
+                <a href="adivinanza.html">Adivinanza</a>
             </nav>
         </div> <!--Barra-->
 
        
     </header> <!--Header-->
    
-
     <main class="container">
         <h1 class="text-center">Alimentación saludable</h1>
 
