--- a/contacto.html
+++ b/contacto.html
@@ -18,8 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-        <script src="JS/codigo.js"></script>
-
+     <script src="JS/script.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <title>Alimentación</title>
@@ -28,7 +27,7 @@
 <body>
     <header>
         <div class="logo text-center">
-            <a href="index.html">
+            <a href="/">
                 <img src="img/Logo.jpg" alt="Logo" class="img-fluid" />
             </a>
         </div>
@@ -39,6 +38,7 @@
             <nav class="navegacion">
                 <a href="comidas.html">Comidas</a>
                 <a href="contacto.html">Contacto</a>
+                <a href="adivinanza.html">Adivinanza</a>
             </nav>
         </div>
         <!--Barra-->
@@ -61,6 +61,15 @@
                     <div class="valid-feedback">¡OK VÁLIDO!</div>
                     <div class="invalid-feedback">COMPLETE EL CAMPO.</div>
                 </div>
+
+                <div class="form-group">
+                    <label for="Apellido">Apellido:</label>
+                    <input class="form-control form-control-lg" id="Apellido" name="Apellido" type="text" value=""
+                        placeholder="Apellido" required />
+                    <div class="valid-feedback">¡OK VÁLIDO!</div>
+                    <div class="invalid-feedback">COMPLETE EL CAMPO.</div>
+                </div>
+
                 <div class="form-group">
                     <label for="email">E-mail:</label>
                     <input class="form-control form-control-lg " name="email" type="email" id="email"
@@ -82,10 +91,12 @@
                     <div class="invalid-feedback">COMPLETE EL CAMPO.</div>
                 </div>
 
-                <input type="submit" value="Enviar" class="btn btn-success" />
+                <input type="submit" value="Enviar"  class="btn btn-success"  id="Btnenviar-formContact"/>
 
             </form>
-
+                
+            <script type="text/javascript" src="JS/script.js"></script>
+        
         </div>
 
 
